微信公众号建设

--- a/templates/weixin/return_pay.html
+++ b/templates/weixin/return_pay.html
@@ -19,7 +19,7 @@
     <div class="nr_con">
         <a href="#" id="money"  class="weui-btn weui-btn_primary page__bd_spacing">确认支付</a>
 
-        <div class="ts_til_test">订单号：{{ order_id }}</div>
+        <div class="fyzf_dd">订单号：{{ order_id }}</div>
 
         <div class="zjjl_zj">
             <div class="zjjl_icon"><img class="zjjl_icon_img" src="{% static '/images/weixin/hr.png' %}" alt="归还"></div>
