--- a/static/css/weixin.css
+++ b/static/css/weixin.css
@@ -404,6 +404,6 @@ h3{font-size: 14px;font-weight: bold;}
     left: 0;
     top: 0;
     z-index: 99;}
-.cz_tip_cont{width: 90%;margin: 50px 0 auto;background-color: white; text-align: left;font-weight:400;color: #666666;z-index: 999;}
-.cz_tip_til{width: 100%;text-align: center;height: 20px;margin: 30px 30px auto;color: #cc0099;font-weight: 400;}
-.cz_tip_bot{width: 30%;}
+.cz_tip_cont{width: 90%;margin: 80px auto;background-color: white; text-align: left;font-weight:400;color: #666666;z-index: 999;line-height: 30px;font-size: 14px;}
+.cz_tip_til{width: 100%;text-align: center;height: 20px;margin: 50px auto;color: #cc0099;font-weight: 400;font-size: 18px;}
+.cz_tip_bot{width: 30%;margin: 50px auto;}
