微信公众号建设

--- a/templates/weixin/return_tip.html
+++ b/templates/weixin/return_tip.html
@@ -20,7 +20,7 @@
             <div class="cz_tip" style="display:none;">
                 <div class="cz_tip_cont">
                     <div class="cz_tip_til">
-                        <div class="zjjl_icon">
+                        <div class="fyzf_icon">
                             <img class="zjjl_icon_img" src="{% static '/images/weixin/chongfang.png' %}" alt="还杆失败提示">
                         </div>操作提示</div>
                     1.可能自拍杆头尾放反，请将有手扣端放在上面；<br>
