--- a/templates/zhifubao/lend.html
+++ b/templates/zhifubao/lend.html
@@ -37,9 +37,11 @@
         ready(function(){
           document.querySelector('#scanQRCode').onclick = function(){
             AlipayJSBridge.call('scan', {
-              type: 'qr'
+                type: 'qr',
+                actionType: 'route'
             }, function (result) {
               alert(JSON.stringify(result));
+              location.href = '/zhifubao/output_tip/' + result + '/' + cabinet_code + '/'
             });
           }
         });
