--- a/templates/zhifubao/lend.html
+++ b/templates/zhifubao/lend.html
@@ -41,7 +41,7 @@
                 actionType: 'route'
             }, function (result) {
               alert(JSON.stringify(result));
-              location.href = '/zhifubao/output_tip/' + result + '/' + cabinet_code + '/'
+{#              location.href = '/zhifubao/output_tip/' + result + '/' + cabinet_code + '/'#}
             });
           }
         });
