--- a/templates/zhifubao/lend.html
+++ b/templates/zhifubao/lend.html
@@ -35,14 +35,27 @@
           }
         }
         ready(function(){
-          document.querySelector('#scanQRCode').onclick = function(){
-            AlipayJSBridge.call('scan', {
-                type: 'qr',
-                actionType: 'route'
-            }, function (result) {
-              alert(JSON.stringify(result));
-{#              location.href = '/zhifubao/output_tip/' + result + '/' + cabinet_code + '/'#}
-            });
+          document.querySelector('#scanQRCode').onclick = function() {
+              var is_deposit = '{{ is_deposit }}';
+              var user_id = '{{ user_id }}';
+              var is_lend = '{{ is_lend }}';
+
+              if (is_deposit == 'False') {
+                  alert('还没有充值，请先去充值吧？', 'danger');
+                  location.href = '/zhifubao/pay/?user_id=' + user_id;
+              } else {
+                  if (is_lend == 'True') {
+                      alert("您还有正在借用的订单，在订单完成前，不能再次借用");
+                      return
+                  }
+                  AlipayJSBridge.call('scan', {
+                      type: 'qr',
+                      actionType: 'route'
+                  }, function (result) {
+                      alert(JSON.stringify(result));
+                      {#              location.href = '/zhifubao/output_tip/' + result + '/' + cabinet_code + '/'#}
+                  });
+              }
           }
         });
 
