--- a/templates/zhifubao/pay.html
+++ b/templates/zhifubao/pay.html
@@ -30,7 +30,7 @@
         $(document).ready(function(){
             // 页面载入完成后即唤起收银台
             // 此处${tradeNO}为模板语言语法，实际调用样例类似为tradePpay("2016072621001004200000000752")
-            var tradeNo = '2016072621001004200000000752';
+            var tradeNo = '{{ tradeNo }}';
             tradePay(tradeNo);
             // 点击payButton按钮后唤起收银台
             $("#payButton").click(function() {
