--- a/templates/zhifubao/pay.html
+++ b/templates/zhifubao/pay.html
@@ -19,28 +19,29 @@
             </div>
      </div>
 
-    <p id="result">result: </p>
-
     <script src="/static/js/jquery-3.2.1.js"></script>
     <script src="/static/js/relalive.js"></script>
     <script>
-        function log(obj) {
-            $("#result").append(obj).append(" ").append("<br />");
-        }
+
+
         $(document).ready(function(){
-            // 页面载入完成后即唤起收银台
-            // 此处${tradeNO}为模板语言语法，实际调用样例类似为tradePpay("2016072621001004200000000752")
-            var tradeNo = '{{ tradeNo }}';
-            tradePay(tradeNo);
-            // 点击payButton按钮后唤起收银台
-            $("#payButton").click(function() {
-               tradePay(tradeNo);
-            });
-            // 通过jsapi关闭当前窗口，仅供参考，更多jsapi请访问
-            // https://docs.open.alipay.com/54/104510/
-            $("#closeButton").click(function() {
-               AlipayJSBridge.call('closeWebview');
-            });
+
+            $('#deposit').click = function () {
+                // 页面载入完成后即唤起收银台
+                // 此处${tradeNO}为模板语言语法，实际调用样例类似为tradePpay("2016072621001004200000000752")
+                var tradeNo = '{{ tradeNo }}';
+                tradePay(tradeNo);
+                // 点击payButton按钮后唤起收银台
+                $("#payButton").click(function() {
+                   tradePay(tradeNo);
+                });
+                // 通过jsapi关闭当前窗口，仅供参考，更多jsapi请访问
+                // https://docs.open.alipay.com/54/104510/
+                $("#closeButton").click(function() {
+                   AlipayJSBridge.call('closeWebview');
+                });
+            };
+
          });
         // 由于js的载入是异步的，所以可以通过该方法，当AlipayJSBridgeReady事件发生后，再执行callback方法
         function ready(callback) {
@@ -58,7 +59,7 @@
                  }, function (data) {
                      log(JSON.stringify(data));
                      if ("9000" == data.resultCode) {
-                         log("支付成功");
+                         location.href = '/zhifubao/lend/';
                      }
                  });
             });
