--- a/templates/weixin/privatecenter.html
+++ b/templates/weixin/privatecenter.html
@@ -19,7 +19,7 @@
             <div class="gr_dh_left">租借记录（<span class="col_z">{{ lendtime }}</span>）</div>
             <div class="gr_dh_right"><img class="dh_jt" src="{% static '/images/weixin/rig.png' %}" alt="更多"></div></a>
            </div>
-           <div class="gr_dh"><a href=""><a href="/weixin/withdraw/">
+           <div class="gr_dh"><a href="/weixin/withdraw/">
             <div class="gr_dh_left">押金提现（<span class="col_z">{{ deposit }}</span>）</div>
             <div class="gr_dh_right"><img class="dh_jt" src="{% static '/images/weixin/rig.png' %}" alt="更多"></div></a>
            </div>
