--- a/templates/zhifubao/pay.html
+++ b/templates/zhifubao/pay.html
@@ -23,24 +23,20 @@
     <script src="/static/js/relalive.js"></script>
     <script>
 
+        $('#deposit').click(function () {
+            var tradeNo = '{{ tradeNo }}';
+            tradePay(tradeNo);
+        });
 
         $(document).ready(function(){
-
-            $('#deposit').click = function () {
-                // 页面载入完成后即唤起收银台
-                // 此处${tradeNO}为模板语言语法，实际调用样例类似为tradePpay("2016072621001004200000000752")
-                var tradeNo = '{{ tradeNo }}';
-                tradePay(tradeNo);
-                // 点击payButton按钮后唤起收银台
-                $("#payButton").click(function() {
-                   tradePay(tradeNo);
-                });
-                // 通过jsapi关闭当前窗口，仅供参考，更多jsapi请访问
-                // https://docs.open.alipay.com/54/104510/
-                $("#closeButton").click(function() {
-                   AlipayJSBridge.call('closeWebview');
-                });
-            };
+            $("#payButton").click(function() {
+               tradePay(tradeNo);
+            });
+            // 通过jsapi关闭当前窗口，仅供参考，更多jsapi请访问
+            // https://docs.open.alipay.com/54/104510/
+            $("#closeButton").click(function() {
+               AlipayJSBridge.call('closeWebview');
+            });
 
          });
         // 由于js的载入是异步的，所以可以通过该方法，当AlipayJSBridgeReady事件发生后，再执行callback方法
