--- a/templates/zhifubao/lend.html
+++ b/templates/zhifubao/lend.html
@@ -49,8 +49,7 @@
                       return
                   }
                   AlipayJSBridge.call('scan', {
-                      type: 'qr',
-                      actionType: 'route'
+                      type: 'qr'
                   }, function (result) {
                       alert(JSON.stringify(result));
                       {#              location.href = '/zhifubao/output_tip/' + result + '/' + cabinet_code + '/'#}
