--- a/templates/zhifubao/lend.html
+++ b/templates/zhifubao/lend.html
@@ -53,6 +53,15 @@
                   }, function (result) {
                       alert(JSON.stringify(result));
                       {#              location.href = '/zhifubao/output_tip/' + result + '/' + cabinet_code + '/'#}
+                      var cabinet_code = '12-1213-21';
+                        $.ajax({
+                            type:"post",
+                            url:"/zhifubao/get_pole/",//自己填写请求地址
+                            data:{cabinet_code:cabinet_code},
+                            success:function(result){
+                                location.href = '/zhifubao/output_tip/' + result + '/' + cabinet_code + '/'
+                            }
+                        });
                   });
               }
           }
