--- a/templates/zhifubao/return.html
+++ b/templates/zhifubao/return.html
@@ -36,9 +36,9 @@
               var user_id = '{{ user_id }}';
               var is_lend = '{{ is_lend }}';
 
-              if (is_lend == 'True') {
-                  alert("您还有正在借用的订单，在订单完成前，不能再次借用");
-                  return
+              if (is_lend == 'False') {
+                  alert("还没有租自拍杆，先去租一个");
+                  location.href = '/weixin/lend/';
               } else {
                   AlipayJSBridge.call('scan', {
                       type: 'qr',
