--- a/templates/zhifubao/return.html
+++ b/templates/zhifubao/return.html
@@ -38,7 +38,7 @@
 
               if (is_lend == 'False') {
                   alert("还没有租自拍杆，先去租一个");
-                  location.href = '/weixin/lend/';
+                  location.href = '/zhifubao/lend/';
               } else {
                   AlipayJSBridge.call('scan', {
                       type: 'qr'
