--- a/static/css/weixin.css
+++ b/static/css/weixin.css
@@ -339,7 +339,8 @@ input.weui-btn_plain-default{
 .zjjl_dd{width: 100%;float:left;text-align: left;}
 .zjjl_zt{width: 33%;float:left;text-align: right;color: #333333;}
 .zjjl_gz{width: 100%;float:left;text-align: left;}
-.zjjl_tf{width: 33%;float: left;color: #333333;text-align: left;}
+.zjjl_tf{width: 33%;float: left;color: #333333;text-align: left;font-weight: bold;}
+.zjjl_tf_mid{text-align: center;}
 .zjjl_zj{width: 100%;float:left;line-height: 24px;text-align: left;height: 60px;}
 .zjjl_icon{width: 20px;height:60px;float: left;margin:4px 10px 0 0;}
 .zjjl_icon_img{width: 18px;height: auto;border: none;}
