--- a/static/css/weixin.css
+++ b/static/css/weixin.css
@@ -346,6 +346,7 @@ input.weui-btn_plain-default{
 .zjjl_icon_img{width: 18px;height: auto;border: none;}
 .fyzf_icon{width: 20px;height:30px;margin:5px 5px 0 0;}
 .zt_jxz{color:#179B16;font-weight: bold;}
+.zt_jxz a{color:#179B16;font-weight: bold;text-decoration: none;}
 .zt_zgm{color:#CE3C39;font-weight: bold;}
 .zt_ywc{color:#333333;font-weight: bold;}
 .wk_ts{width: 100%;height: 100px;line-height: 28px;text-align: center;border-top: 1px solid #d2d2d2;border-bottom: 1px solid #d2d2d2;background-color: white;padding-top: 20px;padding-bottom: 20px;}
