微信公众号建设

--- a/templates/weixin/lendhistory.html
+++ b/templates/weixin/lendhistory.html
@@ -33,7 +33,7 @@
                                <span class="zt_jxz">已借出</span>
                            {% endifequal %}
                            {% ifequal history.5 1 %}
-                               <span class="zt_jxz"><a href="/weixin/return_pay/">已归还,待支付</a></span>
+                               <span class="zt_jxz"><a href="/weixin/return_pay/">待支付</a></span>
                            {% endifequal %}
                            {% ifequal history.5 2 %}
                                <span class="zt_ywc">已完成</span>
