--- a/templates/zhifubao/privatecenter.html
+++ b/templates/zhifubao/privatecenter.html
@@ -11,7 +11,7 @@
        <div class="gr_top">
            <img class="gr_tx" src="{{ headimgurl }}" alt="微信头像">
            <div class="gr_nc">{{ nickname }}</div>
-           于{{ subscribe_time }}成为轻拍一员<br>
+           于{{ subscribe_time | convert_time }}成为轻拍一员<br>
            <span class="col_z">自拍达人一枚，我拍故我在</span>
        </div>
         <div class="gr_dh_cont">
