--- a/templates/zhifubao/privatecenter.html
+++ b/templates/zhifubao/privatecenter.html
@@ -16,11 +16,11 @@
        </div>
         <div class="gr_dh_cont">
            <div class="gr_dh gr_dh_top"><a href="/zhifubao/lendhistory/">
-            <div class="gr_dh_left">租借记录（<span class="col_z">lendtime</span>）</div>
+            <div class="gr_dh_left">租借记录（<span class="col_z">{{ lendtime }}</span>）</div>
             <div class="gr_dh_right"><img class="dh_jt" src="{% static '/images/weixin/rig.png' %}" alt="更多"></div></a>
            </div>
            <div class="gr_dh"><a href="/zhifubao/withdraw/">
-            <div class="gr_dh_left">押金提现（<span class="col_z">deposit</span>）</div>
+            <div class="gr_dh_left">押金提现（<span class="col_z">{{ deposit }}</span>）</div>
             <div class="gr_dh_right"><img class="dh_jt" src="{% static '/images/weixin/rig.png' %}" alt="更多"></div></a>
            </div>
             <div class="gr_dh"><a href="/zhifubao/use_help/">
