--- a/templates/zhifubao/pay.html
+++ b/templates/zhifubao/pay.html
@@ -66,7 +66,14 @@
                 url:"/zhifubao/call_save_order/",
                 data:{out_trade_no: out_trade_no, trade_no: trade_no},
                 success:function(result){
-                    location.href = '/zhifubao/lend/';
+                    if(result === 'success')
+                    {
+                        location.href = '/zhifubao/lend/';
+                    }
+                    else
+                    {
+                        alert('保存租借订单失败，请联系客服');
+                    }
                 }
             });
         }
