--- a/templates/zhifubao/withdraw.html
+++ b/templates/zhifubao/withdraw.html
@@ -33,7 +33,7 @@
                     return
                 }
 
-                if(is_pay_finished === 'True')
+                if(is_pay_finished === 'False')
                 {
                     alert("您还有未完成支付的订单，不能提现！");
                     return
