--- a/templates/zhifubao/return_pay.html
+++ b/templates/zhifubao/return_pay.html
@@ -51,7 +51,7 @@
   }
 }
 ready(function(){
-  document.querySelector('.tradeno').addEventListener('click', function(){
+  document.querySelector('#money').addEventListener('click', function(){
     AlipayJSBridge.call("tradePay",{
       tradeNO: "{{ trade_no }}"
     }, function(result){
