--- a/templates/zhifubao/return_pay.html
+++ b/templates/zhifubao/return_pay.html
@@ -41,24 +41,53 @@
     <script src="/static/js/jquery-3.2.1.js"></script>
     <script src="/static/js/relalive.js"></script>
     <script>
+        $('#money').click(function () {
+            var tradeNo = '{{ trade_no }}';
+            tradePay(tradeNo);
+        });
+
+        $("#payButton").click(function() {
+           tradePay(tradeNo);
+        });
+        // 通过jsapi关闭当前窗口，仅供参考，更多jsapi请访问
+        // https://docs.open.alipay.com/54/104510/
+        $("#closeButton").click(function() {
+           AlipayJSBridge.call('closeWebview');
+        });
+
+        // 由于js的载入是异步的，所以可以通过该方法，当AlipayJSBridgeReady事件发生后，再执行callback方法
         function ready(callback) {
-  // 如果jsbridge已经注入则直接调用
-  if (window.AlipayJSBridge) {
-    callback && callback();
-  } else {
-    // 如果没有注入则监听注入的事件
-    document.addEventListener('AlipayJSBridgeReady', callback, false);
-  }
-}
-ready(function(){
-  document.querySelector('#money').addEventListener('click', function(){
-    AlipayJSBridge.call("tradePay",{
-      tradeNO: "{{ trade_no }}"
-    }, function(result){
-      alert(JSON.stringify(result));
-    });
-  });
-});
+             if (window.AlipayJSBridge) {
+                 callback && callback();
+             } else {
+                 document.addEventListener('AlipayJSBridgeReady', callback, false);
+             }
+        }
+        function tradePay(tradeNO) {
+            ready(function(){
+                 // 通过传入交易号唤起快捷调用方式(注意tradeNO大小写严格)
+                 AlipayJSBridge.call("tradePay", {
+                      tradeNO: tradeNO
+                 }, function (data) {
+                     alert(data);
+                     if ("9000" == data.resultCode) {
+                         save_order(tradeNO);
+                     }
+                 });
+            });
+        }
+
+        function save_order(trade_no){
+            var out_trade_no = '{{ out_trade_no }}';
+            $.ajax({
+                type:"post",
+                url:"/zhifubao/call_return_order/",
+                data:{out_trade_no: out_trade_no, trade_no: trade_no},
+                success:function(result){
+                    location.href = '/zhifubao/privatecenter/';
+                }
+            });
+        }
 
     </script>
 {% endblock %}
