--- a/static/css/weixin.css
+++ b/static/css/weixin.css
@@ -395,8 +395,9 @@ h3{font-size: 14px;font-weight: bold;}
 .cgsm{padding: 0 15px;font-weight: 200;text-align: center;line-height: 30px;color: #333333;margin-top: 50px;font-size: 14px;}
 .cgsm a{text-decoration: none}
 
-.fyzf_time{width: 100%;text-align: center;font-size: 24px;color: #666666;line-height: 30px;margin-bottom: 30px;}
-.fyzf_fee{width: 100%;text-align: center;font-size: 24px;color:#cc0099;line-height: 30px;font-weight: 400;margin-bottom: 30px;}
+.fyzf{padding: 0 15px;font-weight: 200;text-align: center;line-height: 30px;color: #333333;font-size: 18px;}
+.fyzf_time{width: 100%;text-align: center;font-size: 24px;color: #333333;line-height: 30px;margin-bottom: 30px;font-weight: bold;}
+.fyzf_fee{width: 100%;text-align: center;font-size: 28px;color:#cc0099;line-height: 30px;font-weight: bold;margin-bottom: 30px;}
 .fyzf_dd{width: 100%;float:left;text-align: left;line-height: 30px;font-size: 14px;margin: 30px 0 30px 0}
 
 .cz_tip{width:100%;
