--- a/templates/weixin/lend.html
+++ b/templates/weixin/lend.html
@@ -126,7 +126,7 @@
 
                   if (is_deposit == 'False') {
                       alert('还没有充值，请先去充值吧？', 'danger');
-                      location.href = '/zhifubao/pay/?user_id=' + user_id;
+                      location.href = '/weixin/pay/?user_id=' + user_id;
                   } else {
                       if (is_lend == 'True') {
                           alert("您还有正在借用的订单，在订单完成前，不能再次借用");
@@ -140,7 +140,7 @@
                           var cabinet_code = '12-1213-21';
                             $.ajax({
                                 type:"post",
-                                url:"/zhifubao/get_pole/",//自己填写请求地址
+                                url:"/weixin/get_pole/",//自己填写请求地址
                                 data:{cabinet_code:cabinet_code},
                                 success:function(result){
                                     location.href = '/weixin/output_tip/' + result + '/' + cabinet_code + '/'
