--- a/templates/weixin/return.html
+++ b/templates/weixin/return.html
@@ -71,7 +71,7 @@
                     document.querySelector('#scanQRCode').onclick = function () {
                         var is_lend = $('#lend').val();
                         var openid = $('#openid').val();
-                        if (is_lend == 'False')
+                        if (is_lend === 'False')
                         {
                             alert('还没有租自拍杆，先去租一个');
                             location.href = '/weixin/lend/?openid='+ openid;
@@ -106,7 +106,7 @@
 
                       if (is_lend === 'False') {
                           alert("还没有租自拍杆，先去租一个");
-                          location.href = '/zhifubao/lend/';
+                          location.href = '/weixin/lend/';
                       } else {
                           AlipayJSBridge.call('scan', {
                               type: 'qr'
@@ -118,7 +118,7 @@
                                     url:"/weixin/get_capacity/",//自己填写请求地址
                                     data:{cabinet_code:cabinet_code},
                                     success:function(result){
-                                        location.href = '/zhifubao/return_tip/' + result + '/' + cabinet_code + '/'
+                                        location.href = '/weixin/return_tip/' + result + '/' + cabinet_code + '/'
                                     }
                                 });
 
