--- a/templates/weixin/return_pay.html
+++ b/templates/weixin/return_pay.html
@@ -61,7 +61,6 @@
             'getBrandWCPayRequest', {{ data | safe }},
             function(res){
               WeixinJSBridge.log('will'+res.err_msg);
-              //alert(res.err_code+res.err_desc+res.err_msg);
               window.location.href="{{ redirect_uri }}";
               }
             );
@@ -85,7 +84,6 @@
            tradePay(tradeNo);
         });
         // 通过jsapi关闭当前窗口，仅供参考，更多jsapi请访问
-        // https://docs.open.alipay.com/54/104510/
         $("#closeButton").click(function() {
            AlipayJSBridge.call('closeWebview');
         });
@@ -116,10 +114,10 @@
             var out_trade_no = '{{ out_trade_no }}';
             $.ajax({
                 type:"post",
-                url:"/zhifubao/call_return_order/",
+                url:"/weixin/call_return_order/",
                 data:{out_trade_no: out_trade_no, trade_no: trade_no},
                 success:function(result){
-                    location.href = '/zhifubao/privatecenter/';
+                    location.href = '/weixin/privatecenter/';
                 }
             });
         }
