--- a/templates/weixin/nearby.html
+++ b/templates/weixin/nearby.html
@@ -42,7 +42,7 @@
                 var lat = {{ cabinet.6 }};
                 var lon = {{ cabinet.7 }};
                 var tmp_point = new BMap.Point(lon, lat);
-                addMarker(map, tmp_point);
+                addMarker(map, tmp_point, {{ cabinet.1 }});
             {% endfor %}
 
             window.map = map;
@@ -64,9 +64,10 @@
             map.addControl(ctrl_sca);
         }
 
-        function addMarker(map, point){
-          var marker = new BMap.Marker(point);
-          map.addOverlay(marker);
+        function addMarker(map, point, name){
+          var myCompOverlay = new ComplexCustomOverlay(point, name, name);
+          map.addOverlay(myCompOverlay);
+          marker.addEventListener("click",getAttr);
         }
 
         initMap();
