--- a/templates/weixin/nearby.html
+++ b/templates/weixin/nearby.html
@@ -71,6 +71,7 @@
         }
         
         function get_attribute() {
+            alert('0');
             var p = marker.getPosition();
             alert("marker的位置是" + p.lng + "," + p.lat);
         }
