--- a/templates/weixin/nearby.html
+++ b/templates/weixin/nearby.html
@@ -42,7 +42,7 @@
                 var lat = {{ cabinet.6 }};
                 var lon = {{ cabinet.7 }};
                 var tmp_point = new BMap.Point(lon, lat);
-                addMarker(map, tmp_point);
+                addMarker(map, tmp_point,{{ cabinet.1 }});
             {% endfor %}
 
             window.map = map;
@@ -64,17 +64,17 @@
             map.addControl(ctrl_sca);
         }
 
-        function addMarker(map, point){
-          var marker = new BMap.Marker(point);
-          map.addOverlay(marker);
-          marker.addEventListener("click",get_attribute(marker));
+        function addMarker(map, point, name){
+{#          var marker = new BMap.Marker(point);#}
+          var myCompOverlay = new ComplexCustomOverlay(new BMap.Point(point, name ,name);
+          map.addOverlay(myCompOverlay);
         }
         
-        function get_attribute(marker) {
-            alert('0');
-            var p = marker.getPosition();
-            alert("marker的位置是" + p.lng + "," + p.lat);
-        }
+{#        function get_attribute(marker) {#}
+{#            alert('0');#}
+{#            var p = marker.getPosition();#}
+{#            alert("marker的位置是" + p.lng + "," + p.lat);#}
+{#        }#}
 
         initMap();
     </script>
