--- a/templates/weixin/nearby.html
+++ b/templates/weixin/nearby.html
@@ -66,7 +66,7 @@
 
         function addMarker(map, point, name){
 {#          var marker = new BMap.Marker(point);#}
-          var myCompOverlay = new ComplexCustomOverlay(new BMap.Point(point, name ,name);
+          var myCompOverlay = new ComplexCustomOverlay(point, name ,name);
           map.addOverlay(myCompOverlay);
         }
         
