--- a/templates/weixin/nearby.html
+++ b/templates/weixin/nearby.html
@@ -72,6 +72,7 @@
 
         }
         function get_attribute(e) {
+            alert(0);
             var p = e.target;
             if(p instanceof BMap.Marker)
             {
