--- a/templates/weixin/nearby.html
+++ b/templates/weixin/nearby.html
@@ -74,6 +74,7 @@
         function get_attribute(e) {
             alert(0);
             var p = e.target;
+            alert(p);
             if(p instanceof BMap.Marker)
             {
                 alert("marker的位置是" + p.getPosition().lng + "," + p.getPosition().lat);
