--- a/templates/weixin/nearby.html
+++ b/templates/weixin/nearby.html
@@ -41,7 +41,9 @@
             {% for cabinet in cabinets %}
                 var lat = {{ cabinet.6 }};
                 var lon = {{ cabinet.7 }};
-                addMarker(map, lat, lon);
+                var tmp_point = new BMap.Point(lon, lat);
+                var label = new BMap.Lable({{ cabinet.1 }}, {offset:new BMap.Size(20,-10)});
+                addMarker(map, point, label);
             {% endfor %}
 
             window.map = map;
@@ -63,23 +65,16 @@
             map.addControl(ctrl_sca);
         }
 
-        function addMarker(map, lat, lon){
-          var marker = new BMap.Marker(new BMap.Point(lon, lat));
+        function addMarker(map, point, label){
+          var marker = new BMap.Marker(point);
           marker.addEventListener("click",get_attribute);
+          marker.setLable(label);
           map.addOverlay(marker);
-
-
 
         }
         function get_attribute(e) {
             alert(0);
             var p = e.target;
-            alert(p);
-
-            alert("marker的位置是" + p.getPosition().lng + "," + p.getPosition().lat);
-
-
-
         }
         
 
