--- a/templates/weixin/nearby.html
+++ b/templates/weixin/nearby.html
@@ -68,7 +68,7 @@
         function addMarker(map, point, label){
           var marker = new BMap.Marker(point);
           marker.addEventListener("click",get_attribute);
-          marker.setLable(label);
+          marker.setLabel(label);
           map.addOverlay(marker);
 
         }
