--- a/templates/weixin/nearby.html
+++ b/templates/weixin/nearby.html
@@ -43,7 +43,7 @@
                 var lon = {{ cabinet.7 }};
                 var tmp_point = new BMap.Point(lon, lat);
                 var label = new BMap.Label('{{ cabinet.1 }}', {offset:new BMap.Size(20,-10)});
-                addMarker(map, point, label);
+                addMarker(map, tmp_point, label);
             {% endfor %}
 
             window.map = map;
