--- a/templates/weixin/nearby.html
+++ b/templates/weixin/nearby.html
@@ -75,7 +75,7 @@
         function get_attribute(e) {
             alert(0);
             var p = e.target;
-            alert(p.Label);
+            alert(p.label);
         }
         
 
