--- a/templates/weixin/nearby.html
+++ b/templates/weixin/nearby.html
@@ -25,7 +25,7 @@
 
     <script src="/static/js/jquery-3.2.1.js"></script>
     <script src="/static/js/relalive.js"></script>
-    <script type="text/javascript" src="http://api.map.baidu.com/api?key=&v=1.1&services=true"></script>
+    <script type="text/javascript" src="http://api.map.baidu.com/api?key=&v=1.2&services=true"></script>
     <script>
         function initMap(){
             createMap();
@@ -75,7 +75,7 @@
         function get_attribute(e) {
             alert(0);
             var p = e.target;
-            alert(p.getLabel().attributes());
+            alert(p.getLabel().content);
         }
         
 
