--- a/templates/weixin/nearby.html
+++ b/templates/weixin/nearby.html
@@ -75,7 +75,7 @@
             alert(0);
             var p = e.target;
             alert(p.getLabel().content);
-            $('.cabinet_info').val = '<span>name</span><br><span>可借：10</span><span>可还：40</span><a href="#">View</a>';
+            $('.cabinet_info').html('<span>name</span><br><span>可借：10</span><span>可还：40</span><a href="#">View</a>');
         }
 
         initMap();
