--- a/templates/weixin/nearby.html
+++ b/templates/weixin/nearby.html
@@ -79,6 +79,7 @@
             {% for cabinet in cabinets %}
                 {% ifequal cabinet.0 cabinet_id %}
                     var can_lend = '{{ cabinet.4 }}';
+                    alert(can_lend);
                     var can_return = 50 - parseInt('{{ cabinet.4 }}');
                 {% endifequal %}
             {% endfor %}
