--- a/templates/weixin/nearby.html
+++ b/templates/weixin/nearby.html
@@ -20,6 +20,14 @@
     <div class="cabinet_info">
 
     </div>
+    <div>
+        {% for cabinet in cabinets %}
+                {% ifequal cabinet.0 cabinet_id %}
+                    '{{ cabinet.4 }}';
+                    50 - parseInt('{{ cabinet.4 }}');
+                {% endifequal %}
+            {% endfor %}
+    </div>
 
 
     <script src="/static/js/jquery-3.2.1.js"></script>
