--- a/templates/weixin/nearby.html
+++ b/templates/weixin/nearby.html
@@ -22,7 +22,7 @@
     </div>
     <div>
         {% for cabinet in cabinets %}
-                {% ifequal cabinet.0 cabinet_id %}
+                {% ifequal cabinet.0 19 %}
                     '{{ cabinet.4 }}';
                     50 - parseInt('{{ cabinet.4 }}');
                 {% endifequal %}
