--- a/templates/weixin/nearby.html
+++ b/templates/weixin/nearby.html
@@ -86,13 +86,10 @@
             {% for cabinet in cabinets %}
                 {% ifequal cabinet.0 cabinet_id %}
                     var can_lend = '{{ cabinet.4 }}';
-                    alert(can_lend);
-                    var can_return = 50 - parseInt('{{ cabinet.4 }}');
                 {% endifequal %}
             {% endfor %}
             alert('123');
-            alert(can_lend);
-            alert(can_return);
+            var can_return = 30;
             var content = '<span>name</span><br><span>可借：' + can_lend + '</span><span>可还：' + can_return + '</span><a href="/weixin/cabinet_info/' + cabinet_id + '/">View</a>';
             $('.cabinet_info').html(content);
         }
