--- a/templates/weixin/nearby.html
+++ b/templates/weixin/nearby.html
@@ -21,7 +21,7 @@
 
     </div>
     <div>
-        <input type="hidden" id="lend" value="{% for cabinet in cabinets %}{% ifequal cabinet.0 cabinet_id %}{{ cabinet.4 }}{% endifequal %}{% endfor %}">
+        <input type="hidden" id="lend" value="{% for cabinet in cabinets %}{% ifequal cabinet.0 19 %}{{ cabinet.4 }}{% endifequal %}{% endfor %}">
     </div>
 
 
