--- a/templates/weixin/nearby.html
+++ b/templates/weixin/nearby.html
@@ -80,6 +80,13 @@
             alert(p.getLabel().content);
             var cabinet_id = 19;
 
+            {% for cabinet in cabinets %}
+            {% ifequal cabinet.0 19 %}
+                var can_return = 50 - parseInt('{{ cabinet.4 }}');
+            {% endifequal %}
+            {% endfor %}
+            alert(can_return);
+
             var content = '<span>name</span><br><span>可借：' + '{% for cabinet in cabinets %}{% ifequal cabinet.0 19 %}{{ cabinet.4 }}{% endifequal %}{% endfor %}' + '</span><span>可还：</span><a href="/weixin/cabinet_info/' + cabinet_id + '/">View</a>';
             $('.cabinet_info').html(content);
         }
