--- a/templates/weixin/nearby.html
+++ b/templates/weixin/nearby.html
@@ -44,8 +44,7 @@
                 var lat = {{ cabinet.6 }};
                 var lon = {{ cabinet.7 }};
                 var tmp_point = new BMap.Point(lon, lat);
-                var label = new BMap.Label('{{ cabinet.0 }}', {offset:new BMap.Size(20,-10)});
-                addMarker(map, tmp_point, label);
+                addMarker(map, tmp_point, '{{ cabinet.0 }}');
             {% endfor %}
 
             window.map = map;
@@ -67,17 +66,16 @@
             map.addControl(ctrl_sca);
         }
 
-        function addMarker(map, point, label){
-          var marker = new BMap.Marker(point);
+        function addMarker(map, point, cabinet_id){
+          var marker = new BMap.Marker(point, title=cabinet_id);
           marker.addEventListener("click",get_attribute);
-          marker.setLabel(label);
           map.addOverlay(marker);
 
         }
         function get_attribute(e) {
             alert(0);
             var p = e.target;
-            alert(p.getLabel().content);
+            alert(p.getTitle());
             var cabinet_id = 19;
 
             {% for cabinet in cabinets %}
