--- a/templates/weixin/nearby.html
+++ b/templates/weixin/nearby.html
@@ -76,17 +76,18 @@
         function get_attribute(e) {
             alert(0);
             var p = e.target;
-            alert(p.getTitle());
+            alert(p.title);
             var cabinet_id = 19;
 
             {% for cabinet in cabinets %}
             {% ifequal cabinet.0 19 %}
+                var name = '{{ cabinet.1 }}';
                 var can_lend = '{{ cabinet.4 }}';
                 var can_return = 50 - parseInt('{{ cabinet.4 }}');
             {% endifequal %}
             {% endfor %}
 
-            var content = '<span>name</span><br><span>可借：' + can_lend + '</span><span>可还：' + can_return + '</span><a href="/weixin/cabinet_info/' + cabinet_id + '/">View</a>';
+            var content = '<span>' + name +'</span><br><span>可借：' + can_lend + '</span><span>可还：' + can_return + '</span><a href="/weixin/cabinet_info/' + cabinet_id + '/">View</a>';
             $('.cabinet_info').html(content);
         }
 
