--- a/templates/weixin/nearby.html
+++ b/templates/weixin/nearby.html
@@ -72,7 +72,7 @@
         function get_attribute(e) {
             alert(0);
             var p = e.target;
-            alert(p.getTitle());
+            alert(p.getTitle().content);
             var cabinet_id = 19;
 
             {% for cabinet in cabinets %}
