--- a/templates/weixin/nearby.html
+++ b/templates/weixin/nearby.html
@@ -64,15 +64,15 @@
 
         function addMarker(map, point, cabinet_id){
           var marker = new BMap.Marker(point);
-          marker.setTitle('{{ cabinet_id }}');
+
+          marker.setTitle(cabinet_id);
           marker.addEventListener("click",get_attribute);
           map.addOverlay(marker);
 
         }
         function get_attribute(e) {
-            alert(0);
             var p = e.target;
-            alert(p.title);
+            alert(p.getTitle());
             var cabinet_id = 19;
 
             {% for cabinet in cabinets %}
