--- a/templates/weixin/nearby.html
+++ b/templates/weixin/nearby.html
@@ -73,7 +73,7 @@
         function get_attribute(e) {
             var p = e.target;
             var cabinet_id = parseInt(p.getTitle());
-
+            alert(cabinet_id);
             {% for cabinet in cabinets %}
             {% ifequal cabinet.0 cabinet_id %}
                 var name = '{{ cabinet.1 }}';
