--- a/templates/weixin/nearby.html
+++ b/templates/weixin/nearby.html
@@ -75,7 +75,7 @@
             var cabinet_id = parseInt(p.getTitle());
             alert(cabinet_id);
             {% for cabinet in cabinets %}
-            {% ifequal cabinet.0 cabinet_id %}
+            {% ifequal cabinet.0 19 %}
                 var name = '{{ cabinet.1 }}';
                 var can_lend = '{{ cabinet.4 }}';
                 var can_return = 50 - parseInt('{{ cabinet.4 }}');
