--- a/templates/weixin/cabinet_info.html
+++ b/templates/weixin/cabinet_info.html
@@ -9,22 +9,8 @@
 {% block content %}
 
     <div class="gr_dh_cont">
-           <div class="gr_dh"><a href="/weixin/lendhistory/">
-            <div class="gr_dh_left">租借记录（<span class="col_z">{{ lendtime }}</span>）</div>
-            <div class="gr_dh_right"><img class="dh_jt" src="{% static '/images/weixin/rig.png' %}" alt="更多"></div></a>
-           </div>
-           <div class="gr_dh"><a href="">
-            <div class="gr_dh_left">押金提现（<span class="col_z">{{ money }}</span>）</div>
-            <div class="gr_dh_right"><img class="dh_jt" src="{% static '/images/weixin/rig.png' %}" alt="更多"></div></a>
-           </div>
-            <div class="gr_dh"><a href="/weixin/use_help/">
-            <div class="gr_dh_left">使用帮助</div>
-            <div class="gr_dh_right"><img class="dh_jt" src="{% static '/images/weixin/rig.png' %}" alt="更多"></div></a>
-            </div>
-            <div class="gr_dh"><a href="/weixin/about/">
-            <div class="gr_dh_left">关于我们</div>
-            <div class="gr_dh_right"><img class="dh_jt" src="{% static '/images/weixin/rig.png' %}" alt="更多"></div></a>
-             </div>
-        </div>
+        <span>可借: {{ can_lend }}</span><span>可还： {{ can_return }}</span>
+
+    </div>
 
 {% endblock %}
