--- a/templates/weixin/cabinet_info.html
+++ b/templates/weixin/cabinet_info.html
@@ -10,7 +10,7 @@
 
     <div class="gr_dh_cont">
         <span>可借: {{ can_lend }}</span><span>可还： {{ can_return }}</span>
-
+        <a href="/weixin/goto_cabinet/{{ cabinet_id }}/">GO</a>
     </div>
 
 {% endblock %}
