--- a/templates/base.html
+++ b/templates/base.html
@@ -24,8 +24,7 @@
 <div class="con_gray">
   <div class="foot_con">
     <div class="foot_con_imgbox"><img class="foot_con_img" src="{% static 'images/ewm.png' %}" alt="微信公众号"/>微信公众号</div>
-    <div class="foot_con_imgbox"><img class="foot_con_img" src="{% static 'images/ewm.png' %}" alt="微信小程序"/>微信小程序即将推出</div>
-    <div class="foot_con_imgbox"><img class="foot_con_img" src="{% static 'images/ewm.png' %}" alt="支付宝生活号"/>支付宝生活号即将推出</div>
+    <div class="foot_con_imgbox"><img class="foot_con_img" src="{% static 'images/shenghuohao.png' %}" alt="支付宝生活号"/>支付宝生活号</div>
 </div>
 </div>
   <div class="foot_cont_bq">
