--- a/templates/weixin/goto_cabinet.html
+++ b/templates/weixin/goto_cabinet.html
@@ -25,7 +25,7 @@
     <script src="/static/js/relalive.js"></script>
     <script type="text/javascript" src="http://api.map.baidu.com/api?key=&v=1.2&services=true"></script>
     <script>
-        var map = new BMap.Map("allmap");
+        var map = new BMap.Map("dituContent");
         map.centerAndZoom(new BMap.Point(116.404, 39.915), 15);
 
         var myP1 = new BMap.Point(116.380967,39.913285);    //起点
