微信公众号建设

--- a/templates/weixin/nearby_list.html
+++ b/templates/weixin/nearby_list.html
@@ -1,6 +1,6 @@
 {% extends "weixin/base.html" %}
 {% load static %}
-
+{% block title %}茄子自拍{% endblock %}
 {% block head %}
     <div class="weixin-title">
         <div class="div-back"><a href="/weixin/privatecenter/">&lt;返回</a></div>
