--- a/templates/weixin/nearby.html
+++ b/templates/weixin/nearby.html
@@ -1,6 +1,6 @@
 {% extends "weixin/base.html" %}
 {% load static %}
-
+{% block title %}茄子自拍{% endblock %}
 {% block head %}
     <style type="text/css">
         html,body{margin:0;padding:0;}
