微信公众号建设

--- a/templates/weixin/weixin_return_pay.html
+++ b/templates/weixin/weixin_return_pay.html
@@ -10,9 +10,9 @@
 
      <div class="ts_cont_all">
        <div class="fyzf">
-           <div class="fyzf_h"><div class="fyzf_icon"><img class="zjjl_icon_img" src="{% static '/images/weixin/shichang.png' %}" alt="租借时长"></div>租借时长</div>
+           <div class="fyzf_h"><div class="fyzf_icon"><img class="zjjl_icon_img" src="{% static '/images/weixin/shichang.png' %}" alt="租借时长"></div><div class="fyzf_h_con">租借时长</div></div>
            <div class="fyzf_time">{{ lend_time_long }}</div>
-           <div class="fyzf_h"><div class="fyzf_icon"><img class="zjjl_icon_img" src="{% static '/images/weixin/feiyong.png' %}" alt="租借费用"></div>租借费用</div>
+           <div class="fyzf_h"><div class="fyzf_icon"><img class="zjjl_icon_img" src="{% static '/images/weixin/feiyong.png' %}" alt="租借费用"></div><div class="fyzf_h_con">租借费用</div></div>
            <div class="fyzf_fee">{{ lend_money }}</div>
        </div>
     </div>
