微信公众号建设

--- a/templates/weixin/lendhistory.html
+++ b/templates/weixin/lendhistory.html
@@ -19,16 +19,7 @@
                    <div class="zjjl_h">
                        <div class="zjjl_dd">订单号：{{ history.0 }}</div>
                    </div>
-                   <div class="zjjl_h">
-                       <div class="zjjl_tf">时长(时)：<span class="col_z">
-                           {% if history.3 %}
-                                {{ history.2 | get_time_long:history.3 }}
-                           {% else %}
-                                {{ history.2 | get_time_long }}
-                           {% endif %}</span>
-                       </div>
-                       <div class="zjjl_tf zjjl_tf_mid">费用(元)：<span class="col_z">{{ history.0 | get_tmp_money }}</span></div>
-                       <div class="zjjl_zt">状态：
+                   <div class="zjjl_zt">
                            {% ifequal history.5 0 %}
                                <span class="zt_jxz">已借出</span>
                            {% endifequal %}
@@ -42,6 +33,16 @@
                                <span class="zt_zgm"><a href="/weixin/buy_tip/{{ history.0 }}/" onclick="show_buy()">已购买</a></span>
                            {% endifequal %}
                        </div>
+                   <div class="zjjl_h">
+                       <div class="zjjl_tf">时长(时)：<span class="col_z">
+                           {% if history.3 %}
+                                {{ history.2 | get_time_long:history.3 }}
+                           {% else %}
+                                {{ history.2 | get_time_long }}
+                           {% endif %}</span>
+                       </div>
+                       <div class="zjjl_tf">费用(元)：<span class="col_z">{{ history.0 | get_tmp_money }}</span></div>
+
                    </div>
                     <div class="zjjl_h">
                        <div class="zjjl_gz">
