--- a/templates/home/cooperation.html
+++ b/templates/home/cooperation.html
@@ -2,7 +2,7 @@
 
 {% load static %}
 
-{% block title %}自拍神器{% endblock %}
+{% block title %}商家合作{% endblock %}
 
 {% block content %}
     <div class="cp_content_bg">
