--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -22,6 +22,10 @@
                             class="menudesc"></span></a>
                 </li>
                 <li>
+                    <a href="/home/cooperation/"><span class="menutitle">商家合作</span><span
+                            class="menudesc"></span></a>
+                </li>
+                <li>
                     <a href="/home/about/"><span class="menutitle">关于我们</span><span
                             class="menudesc"></span></a>
                 </li>
