--- a/templates/home/about.html
+++ b/templates/home/about.html
@@ -20,6 +20,10 @@
                     <a href="/home/ownpic/"><span class="menutitle">自拍神器</span></a>
                 </li>
                 <li>
+                    <a href="/home/cooperation/"><span class="menutitle">商家合作</span><span
+                            class="menudesc"></span></a>
+                </li>
+                <li>
                     <span class="crunt">关于我们</span>
                 </li>
             </ul>
