微信公众号建设

--- a/templates/home/cooperation.html
+++ b/templates/home/cooperation.html
@@ -2,7 +2,7 @@
 
 {% load static %}
 
-{% block title %}商家合作{% endblock %}
+{% block title %}合作加盟{% endblock %}
 
 {% block content %}
     <div class="cp_content_bg">
@@ -18,11 +18,10 @@
                     <a href="/home/"><span class="menutitle">首页</span></a>
                 </li>
                 <li>
-                    <span class="crunt">自拍神器</span>
+                    <a href="/home/ownpic/"><span class="menutitle">自拍神器</span></a>
                 </li>
                 <li>
-                    <a href="/home/cooperation/"><span class="menutitle">商家合作</span><span
-                            class="menudesc"></span></a>
+                    <span class="crunt">合作加盟</span>
                 </li>
                 <li>
                     <a href="/home/about/"><span class="menutitle">关于我们</span></a>
