--- a/static/css/style.css
+++ b/static/css/style.css
@@ -10,6 +10,8 @@ body {margin:0 auto; padding:0 auto; height: 100%;}
 .cp_content{ width:100%;height: 500px;background-size:100% 100%; background: url("/static/images/ownpic/cp_bg.jpg") center no-repeat; }
 .cp_slogn{width: 80%;color: white;text-align: left;margin: 100px auto;}
 
+.hzjm_content{ width:100%;height: 400px;background-size:100% 100%; background: url("/static/images/about/hzjm.jpg") center no-repeat;background-color: #b21d70; }
+.hzjm_slogn{width: 80%;color: white;text-align: center;margin: 100px auto;}
 
 .wm_content{ width:100%;height: 400px;background-size:100% 100%; background: url("/static/images/about/wm_bg.jpg") center no-repeat;background-color: #b21d70; }
 .wm_slogn{width: 80%;color: white;text-align: center;margin: 100px auto;}
